extend Base.html for backwards compatibility; change formula and K values

--- a/templates/utility/Results.html
+++ b/templates/utility/Results.html
@@ -1,4 +1,4 @@
-{% extends "global/Page.html" %}
+{% extends "global/Base.html" %}
 {% load staticfiles otree_tags %}
 
 {% block title %}
@@ -9,5 +9,3 @@
 
     {% next_button %}
 {% endblock %}
-
-
