--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -19,46 +19,83 @@
     <script src="{% static "js/vue.min.js" %}"></script>
     <script src="{% static "js/d3.min.js" %}"></script>
     <script src="{% static "js/vue-range-slider.cjs.js" %}"></script>
+    <script src="{% static "js/graph.js" %}"></script>
     <script type="text/javascript">
-    var appSpecific = {
-        precision: {{ Constants.precision }},
-        scale: {
-            type: '{{ Constants.scale.type }}',
-            max: {{ Constants.scale.max }}
-        },
-        constants: {
-            k: {{ Constants.constants.k }},
-            maxArea: {{ Constants.constants.maxArea }}
-        },
-        width: {{ Constants.width }},
-        height: {{ Constants.height }},
-        margin: {
-            top: {{ Constants.margin.top }},
-            right: {{ Constants.margin.right }},
-            bottom: {{ Constants.margin.bottom }},
-            left: {{ Constants.margin.left }},
-        },
-        label: {
-            x: '{{ Constants.label.x }}',
-            y: '{{ Constants.label.y }}'
-        },
-        mode: '{{ Constants.mode }}',
-        equation: {
-            m: {{ Constants.equation.m }},
-            px: {{ Constants.equation.px }},
-            py: {{ Constants.equation.py }},
-            a: {
-                x: {{ Constants.equation.a.x }},
-                y: {{ Constants.equation.a.y }}
-            },
-            b: {
-                x: {{ Constants.equation.b.x }},
-                y: {{ Constants.equation.b.y }}
+    var totalRounds = {{ Constants.num_rounds }}
+    var currentRound = 1
+    var constantValues = {{ Constants.static_values | safe }}
+    var defaultValues  = {{ Constants.default_values | safe }}
+    var dynamicValues  = {{ Constants.dynamic_values | safe }}
+
+    var appSpecific = {}
+
+    var getRoundLabel = function() {
+        var roundData = dynamicValues[currentRound - 1]
+        var template =  'Round ' + currentRound + ': '
+        if (roundData && roundData.Mode) return template + roundData.Mode
+        return template + 'negative'
+    }
+
+    var getMode = function() {
+        var roundData = dynamicValues[currentRound - 1]
+        if (roundData && roundData.Mode) return roundData.Mode
+        return 'negative'
+    }
+
+    var getEquation = function() {
+        var roundData = dynamicValues[currentRound - 1]
+        if (roundData) {
+            if (roundData.Mode && roundData.Mode === 'probability') {
+                return defaultValues.equation
             }
+            return {
+                m: (typeof roundData.Income === 'undefined' ? defaultValues.equation.m : roundData.Income),
+                px: (typeof roundData.Px === 'undefined' ? defaultValues.equation.px : roundData.Px),
+                py: (typeof roundData.Py === 'undefined' ? defaultValues.equation.py : roundData.Py),
+                a: (typeof roundData.A === 'undefined' ? defaultValues.equation.a : {
+                    x: (typeof roundData.A.X === 'undefined' ? defaultValues.equation.a.x : roundData.A.x),
+                    y: (typeof roundData.A.Y === 'undefined' ? defaultValues.equation.a.y : roundData.A.y)
+                }),
+                b: (typeof roundData.B === 'undefined' ? defaultValues.equation.b : {
+                    x: (typeof roundData.B.X === 'undefined' ? defaultValues.equation.b.x : roundData.B.x),
+                    y: (typeof roundData.B.Y === 'undefined' ? defaultValues.equation.b.y : roundData.B.y)
+                })
+            }
+        }else{
+            return defaultValues.equation
         }
     }
+
+    var getLabels = function() {
+        var roundData = dynamicValues[currentRound - 1]
+        if (roundData) {
+            return (typeof roundData.label === 'undefined' ? defaultValues.label : {
+                x: (typeof roundData.label.x === 'undefined' ? defaultValues.label.x : roundData.label.x),
+                y: (typeof roundData.label.y === 'undefined' ? defaultValues.label.y : roundData.label.y)
+            })
+        }else{
+            return defaultValues.equation
+        }
+    }
+
+    var newGraphData = function() {
+        var graphData = {}
+
+        graphData = Object.assign({}, constantValues)
+
+        Object.assign(graphData, {
+            mode: getMode(),
+            label: getLabels(),
+            equation: getEquation()
+        })
+
+        $('.round-label').html(getRoundLabel())
+
+        return graphData
+    }
+
     </script>
-    <script src="{% static "js/graph.js" %}"></script>
+
 {% endblock %}
 
 {% block title %}
@@ -68,6 +105,9 @@
 {% block content %}
     <div id="app">
         <div class="container">
+            <div class="row">
+                <h4 class="round-label"></h4>
+            </div>
             <div class="row">
                 <div class="graph col-md-6"></div>
                 <div class="col-md-6" style="margin-top: 50px" v-if="mode === 'probability'">
@@ -107,6 +147,27 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+    var graphInstance = null
+    $(document).ready(function() {
+        appSpecific = newGraphData()
+        graphInstance = new riskGraph().$mount('#app')
+        $('.otree-next-button').hide()
+    })
+    function nextRound() {
+        if (currentRound === totalRounds) {
+            return
+        }
+        currentRound++
+        graphInstance.update(newGraphData())
+        if (currentRound === totalRounds) {
+            $('.otree-next-button').show()
+            $('.next-round').hide()
+        }
+    }
+    </script>
+
+    <button class="btn btn-primary next-round" onclick="nextRound(); return false;" style="display: inline-block;">Next Round</button>
     {% next_button %}
 
 {% endblock %}
