--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -26,6 +26,8 @@
     var currentRound = {{ player.round_number | json }}
     var constantValues = {{ Constants.static_values | json }}
     var defaultValues  = {{ Constants.default_values | json }}
+
+    // Notes: these can probably be offloaded to Python
     var dynamicValues  = {{ Constants.dynamic_values | json }}
 
     var appSpecific = {}
@@ -43,6 +45,10 @@
         return 'negative'
     }
 
+    var defaultValue = function(sourceObj, sourceKey, defaultObj, defaultKey) {
+        return (typeof sourceObj[sourceKey] === 'undefined' ? defaultObj[defaultKey] : sourceObj[sourceKey])
+    }
+
     var getEquation = function() {
         var roundData = dynamicValues[currentRound - 1]
         if (roundData) {
@@ -50,16 +56,16 @@
                 return defaultValues.equation
             }
             return {
-                m: (typeof roundData.Income === 'undefined' ? defaultValues.equation.m : roundData.Income),
-                px: (typeof roundData.Px === 'undefined' ? defaultValues.equation.px : roundData.Px),
-                py: (typeof roundData.Py === 'undefined' ? defaultValues.equation.py : roundData.Py),
+                m: defaultValue(roundData, 'Income', defaultValues.equation, 'm'),
+                px: defaultValue(roundData, 'Py', defaultValues.equation, 'py'),
+                py: defaultValue(roundData, 'Px', defaultValues.equation, 'px'),
                 a: (typeof roundData.A === 'undefined' ? defaultValues.equation.a : {
-                    x: (typeof roundData.A.X === 'undefined' ? defaultValues.equation.a.x : roundData.A.x),
-                    y: (typeof roundData.A.Y === 'undefined' ? defaultValues.equation.a.y : roundData.A.y)
+                    x: defaultValue(roundData.A, 'X', defaultValues.equation.a, 'x'),
+                    y: defaultValue(roundData.A, 'Y', defaultValues.equation.a, 'y'),
                 }),
                 b: (typeof roundData.B === 'undefined' ? defaultValues.equation.b : {
-                    x: (typeof roundData.B.X === 'undefined' ? defaultValues.equation.b.x : roundData.B.x),
-                    y: (typeof roundData.B.Y === 'undefined' ? defaultValues.equation.b.y : roundData.B.y)
+                    x: defaultValue(roundData.B, 'X', defaultValues.equation.b, 'x'),
+                    y: defaultValue(roundData.B, 'Y', defaultValues.equation.b, 'y'),
                 })
             }
         }else{
@@ -111,8 +117,9 @@
             </div>
             <div class="row">
                 <div class="graph col-md-6"></div>
-                <div class="col-md-6" style="margin-top: 50px" v-if="mode === 'probability'">
-                    <div class="row">
+                <div class="col-md-6" v-if="mode === 'probability'">
+                    <h5>Currently selected values:</h5>
+                    <div class="row" style="margin-top: 50px">
                         <range-slider
                         class="slider"
                         min="0"
@@ -137,11 +144,20 @@
                     </div>
                 </div>
                 <div class="row" v-if="mode !== 'probability'">
-                    <div class="col-md-6" v-html="'Circle: ' + JSON.stringify(selected[0])">
+                    <h5>Currently selected values:</h5>
+                    <div class="col-12">
+                        <div class="col-2">
+                            Circle:
+                        </div>
+                        <div class="col-10" v-html="'(x = ' + selected[0].x + ', y = ' + selected[0].y + ')'">
+                        </div>
                     </div>
-                    <input type="hidden" name="x" value="10" id="id_x"/>
-            		<input type="hidden" name="y" value="10" id="id_y"/>
-                    <div class="col-md-6" v-if="selected[1] && selected[1].x" v-html="'Rect: ' + JSON.stringify(selected[1])">
+                    <div class="col-12">
+                        <div class="col-2">
+                            Square:
+                        </div>
+                        <div class="col-10" v-html="'(x = ' + selected[1].x + ', y = ' + selected[1].y + ')'">
+                        </div>
                     </div>
                 </div>
             </div>
