--- a/templates/RiskAndFairness_oTree/Results.html
+++ b/templates/RiskAndFairness_oTree/Results.html
@@ -2,10 +2,9 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Page title
+    Result has been recorded
 {% endblock %}
 
 {% block content %}
-    Hi
     {% next_button %}
 {% endblock %}
