--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -1,6 +1,13 @@
 {% extends "global/Base.html" %}
 {% load staticfiles otree_tags %}
 
+
+{% block title %}
+    Risk Preference
+{% endblock %}
+
+
+
 {% block styles %}
     <link href="{% static "css/vue-range-slider.css" %}" rel="stylesheet">
     <style> /* set the CSS */
@@ -22,7 +29,7 @@
     <script type="text/javascript">
 
     /*
-    Principle maintainer: Rachel Chen <me@rachelchen.me>
+    Principal maintainer: Rachel Chen <me@rachelchen.me>
     Contributors:
         <add your name here>
     */
@@ -110,9 +117,7 @@
 
 {% endblock %}
 
-{% block title %}
-    Risk Preference
-{% endblock %}
+
 
 {% block content %}
     <div id="app">
