consistent variable naming

--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -186,8 +186,8 @@
             </div>
             <div class="row" v-if="mode !== 'probability'">
                 <input type="hidden" name="mode" v-model="mode" />
-                <input type="hidden" name="other_a" v-model="selected[0].x" />
-                <input type="hidden" name="other_b" v-model="selected[0].y" />
+                <input type="hidden" name="partner_a" v-model="selected[0].x" />
+                <input type="hidden" name="partner_b" v-model="selected[0].y" />
                 <input type="hidden" name="me_a" v-model="selected[1].x" />
                 <input type="hidden" name="me_b" v-model="selected[1].y" />
                 <input type="hidden" name="prob_a" v-model="prob.a" />
