--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -165,22 +165,70 @@
                             Probability of B:
                         </div>
                     </div>
+                    <div class="row col-md-6" style="margin-top: 50px">
+                        <table class="table table-bordered table-condensed small">
+                            <thead>
+                                <tr>
+                                    <td>State: Probability (%)</td>
+                                    <td>Your Tokens</td>
+                                    <td>Partner's Tokens</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td v-html="'A: ' + prob.a.toFixed(0) + '%'"></td>
+                                    <td v-html="equation.a.x"></td>
+                                    <td v-html="equation.a.y"></td>
+                                </tr>
+                                <tr>
+                                    <td v-html="'B: ' + prob.b.toFixed(0) + '%'"></td>
+                                    <td v-html="equation.b.x"></td>
+                                    <td v-html="equation.b.y"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <div class="row" v-if="mode !== 'probability'">
-                    <h5>Currently selected values:</h5>
-                    <div class="col-12">
-                        <div class="col-2">
-                            Circle:
+                <div class="col-md-6" v-if="mode !== 'probability'">
+                    <div class="row">
+                        <h5>Currently selected values:</h5>
+                        <div class="col-12">
+                            <div class="col-2">
+                                Circle:
+                            </div>
+                            <div class="col-10" v-html="'(x = ' + selected[0].x + ', y = ' + selected[0].y + ')'">
+                            </div>
                         </div>
-                        <div class="col-10" v-html="'(x = ' + selected[0].x + ', y = ' + selected[0].y + ')'">
+                        <div class="col-12">
+                            <div class="col-2">
+                                Square:
+                            </div>
+                            <div class="col-10" v-html="'(x = ' + selected[1].x + ', y = ' + selected[1].y + ')'">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-12">
-                        <div class="col-2">
-                            Square:
-                        </div>
-                        <div class="col-10" v-html="'(x = ' + selected[1].x + ', y = ' + selected[1].y + ')'">
-                        </div>
+                    <div class="row col-md-6" style="margin-top: 50px">
+                        <table class="table table-bordered table-condensed small">
+                            <thead>
+                                <tr>
+                                    <td>State: Probability (%)</td>
+                                    <td>Your Tokens</td>
+                                    <td>Partner's Tokens</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td v-html="'A: ' + prob.a.toFixed(0) + '%'"></td>
+                                    <td v-html="selected[1].x"></td>
+                                    <td v-html="selected[0].x"></td>
+                                </tr>
+                                <tr>
+                                    <td v-html="'B: ' + prob.b.toFixed(0) + '%'"></td>
+                                    <td v-html="selected[1].y"></td>
+                                    <td v-html="selected[0].y"></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
