added table template to Results.html, added check for prob_a, and ensured that random payment draw works correctly

--- a/templates/RiskAndFairness_oTree/Results.html
+++ b/templates/RiskAndFairness_oTree/Results.html
@@ -6,5 +6,25 @@
 {% endblock %}
 
 {% block content %}
+    <hr>
+	<table style="width:50%">
+		<tr>
+			<th>Task</th>
+			<td>temp</td>
+		</tr>
+		<tr>
+			<th>Decision</th>
+			<td>temp</td>
+		</tr>
+		<tr>
+			<th>Outcome</th>
+			<td>temp</td>
+		</tr>
+		<tr>
+			<th>Payoff</th>
+			<td>temp</td>
+		</tr>
+    </table>
+    <hr>
     {% next_button %}
 {% endblock %}
