--- a/templates/RiskAndFairness_oTree/Results.html
+++ b/templates/RiskAndFairness_oTree/Results.html
@@ -9,20 +9,20 @@
     <hr>
 	<table style="width:50%">
 		<tr>
-			<th>Task</th>
-			<td>temp</td>
+			<th>Paid Task</th>
+			<td>{{ mode }}</td>
 		</tr>
 		<tr>
 			<th>Decision</th>
-			<td>temp</td>
+			<td>{{ decision }}</td>
 		</tr>
 		<tr>
 			<th>Outcome</th>
-			<td>temp</td>
+			<td>{{ player.outcome }}</td>
 		</tr>
 		<tr>
 			<th>Payoff</th>
-			<td>temp</td>
+			<td>{{ player.payoff }} </td>
 		</tr>
     </table>
     <hr>
