--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -197,19 +197,19 @@
                                 <tr>
                                     <td>State: Probability (%)</td>
                                     <td>Your Tokens</td>
-                                    <td>Partner's Tokens</td>
+                                    <td v-if="mode !== 'single'">Partner's Tokens</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td v-html="'A: ' + prob.a.toFixed(0) + '%'"></td>
                                     <td v-html="selected[0].x"></td>
-                                    <td v-html="selected[1].x"></td>
+                                    <td v-html="selected[1].x" v-if="mode !== 'single'"></td>
                                 </tr>
                                 <tr>
                                     <td v-html="'B: ' + prob.b.toFixed(0) + '%'"></td>
                                     <td v-html="selected[0].y"></td>
-                                    <td v-html="selected[1].y"></td>
+                                    <td v-html="selected[1].y" v-if="mode !== 'single'"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -218,8 +218,8 @@
             </div>
             <div class="row" v-if="mode !== 'probability'">
                 <input type="hidden" name="mode" v-model="mode" />
-                <input type="hidden" name="partner_a" v-model="selected[1].x" />
-                <input type="hidden" name="partner_b" v-model="selected[1].y" />
+                <input type="hidden" v-if="mode !== 'single'" name="partner_a" v-model="selected[1].x" />
+                <input type="hidden" v-if="mode !== 'single'" name="partner_b" v-model="selected[1].y" />
                 <input type="hidden" name="me_a" v-model="selected[0].x" />
                 <input type="hidden" name="me_b" v-model="selected[0].y" />
                 <input type="hidden" name="prob_a" v-model="prob.a" />
