commit before merge

--- a/templates/RiskAndFairness_oTree/Results.html
+++ b/templates/RiskAndFairness_oTree/Results.html
@@ -1,6 +1,15 @@
 {% extends "global/Base.html" %}
 {% load staticfiles otree_tags %}
 
+{% block scripts %}
+    <script type="text/javascript">
+      window.onload = function () 
+      {
+        document.getElementById("arrive_time").value = (new Date()).toISOString();
+      }
+    </script>
+{% endblock %}
+
 {% block title %}
     Result has been recorded
 {% endblock %}
