--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -147,6 +147,7 @@
 
 
 {% block content %}
+    {% formfield player.time_Graph with label=None %}
     <div id="app">
         <div class="container">
             <div class="row">
