--- a/templates/RiskAndFairness_oTree/Results.html
+++ b/templates/RiskAndFairness_oTree/Results.html
@@ -15,6 +15,7 @@
 {% endblock %}
 
 {% block content %}
+    {% formfield player.time_Results with label=None %}
     <hr>
 	<table style="width:50%">
 		<tr>
