--- a/templates/RiskAndFairness_oTree/TaskInstructions.html
+++ b/templates/RiskAndFairness_oTree/TaskInstructions.html
@@ -35,6 +35,7 @@
 {% endblock %}
 
 {% block content %}
+    {% formfield player.time_TaskInstructions with label=None %}
     {% if mode == 'independent' %}
         <h3>independent temp</h3>
         <p>
