--- a/templates/RiskAndFairness_oTree/TaskInstructions.html
+++ b/templates/RiskAndFairness_oTree/TaskInstructions.html
@@ -17,7 +17,9 @@
     {% endif %}
     
     {% if mode == 'probability' %}
-        probability temp
+
+        Task Type 1 (Prob)
+
     {% endif %}
 
     {% if mode == 'single' %}
@@ -33,6 +35,8 @@
     {% endif %}
 
 {% endblock %}
+
+
 
 {% block content %}
     {% if mode == 'independent' %}
