--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -42,7 +42,9 @@
         'sec_1bl_1ch': 'positive',
         'sec_2bl_1ch': 'negative',
         'sec_1bl_2ch': 'independent',
-        'sec_ownrisk': 'single'
+        'sec_ownrisk': 'single',
+        'sec_ownrisk_fixedother': 'single_fixedcircle',
+        'sec_otherrisk_ownfixed': 'single_fixedsquare'
     }
 
     var somethingChanged = false;
@@ -66,11 +68,12 @@
 
     var getEquation = function() {
         var roundData = dynamicValues[currentRound - 1]
+
         if (roundData) {
             return {
                 m: defaultValue(roundData, 'm', defaultValues.equation, 'm'),
-                px: defaultValue(roundData, 'py', defaultValues.equation, 'py'),
-                py: defaultValue(roundData, 'px', defaultValues.equation, 'px'),
+                px: defaultValue(roundData, 'p_x', defaultValues.equation, 'py'),
+                py: defaultValue(roundData, 'p_y', defaultValues.equation, 'px'),
                 a: {
                     x: defaultValue(roundData, 'a_x', defaultValues.equation, 'a_x'),
                     y: defaultValue(roundData, 'a_y', defaultValues.equation, 'a_y'),
@@ -94,6 +97,25 @@
             })
         }else{
             return defaultValues.label
+        }
+    }
+
+    var getFixed = function() {
+        var roundData = dynamicValues[currentRound - 1]
+        switch (getMode()) {
+            case 'single_fixedcircle':
+            case 'single_fixedsquare':
+            return {
+                m: roundData.fixed.m,
+                px: roundData.fixed.p_x,
+                py: roundData.fixed.p_y,
+                x: roundData.fixed.a,
+                y: roundData.fixed.b
+            }
+            break;
+            default:
+            return {}
+            break;
         }
     }
 
@@ -127,6 +149,7 @@
         graphData = Object.assign({}, constantValues)
 
         Object.assign(graphData, {
+            fixed: getFixed(),
             mode: getMode(),
             label: getLabels(),
             equation: getEquation(),
