--- a/templates/RiskAndFairness_oTree/Probability.html
+++ b/templates/RiskAndFairness_oTree/Probability.html
@@ -2,22 +2,21 @@
 
 <div class="instructions well well-lg">
 
-    <h3 class="panel-sub-heading">
-        Instruccions for Task Type ________________ </font>
-    </h3>
+    <h2 class="panel-sub-heading">
+        Instructions - Task PR
+    </h2>
 
     <p>
         In this task, you are given two fixed, mutually exclusive outcomes.
         You are then asked to decide the probabilities of these two outcomes.
     </p>
 
-    Figure 1: Task 1
-
     <p>
         In the left-side graph, your tokens are represented on the horizontal axis and
         Partner’s tokens on the vertical axis. Each of the two possible outcomes is represented
         by a dot or a bubble in this graph. You must decide what the probability of each outcome is
-        in percentage (%) terms. Figure 1 shows an example of this task where the two fixed outcomes are
+        in percentage (%) terms. The figure below shows a sample screenshot
+        of this task where the two fixed outcomes are
         A = (You: 10, Partner: 90) and B = (You: 80, Partner: 10).
     </p>
 
@@ -37,8 +36,8 @@
         In the graph, the size of each outcome bubble will increase with the chances it is given.
         You can try as many combinations as you want before you submit your decision.
         The same information of the graph is displayed in the table below the slider bar.
-        Throughout this session, <p style="color: blue"> your tokens will be represented in blue </p> and
-        your <p style="color: orange"> Partner’s tokens in orange</p>.
+        Throughout this session, <b style="color: blue"> your tokens will be represented in blue </b> and
+        your <b style="color: orange"> Partner's tokens in orange</b>.
     </p>
 
     <p>
@@ -46,6 +45,13 @@
         If you do not make a choice (do not move the slider to your preferred position, the computer will return an error.
         Please think your decisions carefully.
     </p>
+
+        <div style="align-content: center; border:0px solid gray">
+            <img alt="Sample Screenshot - Task PR"
+                 src="{% static "probability.png" %}"
+                 width="500"
+                 align="center"/>
+        </div> </br>
 
 </div>
 
